--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+/* *{
+    overflow-x: hidden;
+} */
+*{
+    scroll-behavior: smooth;
+}
+@media screen and (max-width:425px) {
+    *{
+        overflow-x: hidden;
+    }
+    ::-webkit-scrollbar {
+        display: none;
+      }
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+	background-color: #f6f6f6f2;
+    
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*::-webkit-scrollbar
+{
+	width: 12px;
+    height: 0px;
+    border-radius: 15px;
+	background-color: #c1c1c1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+*::-webkit-scrollbar-thumb
+{   
+    width: 24px;
+    height: 20px;
+    /* background: #F90; */
+    border-radius: 15px;
+	-webkit-box-shadow: inset 0 0 rgba(0,0,0,.3);
+	background-color: #F90;
 }
